gatekeeper-policies/constraint-denyroot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyRootUser
metadata:
  name: enforce-non-root-user
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
