gatekeeper-policies/constraint-template-imagesafety.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8simageregistry
spec:
  crd:
    spec:
      names:
        kind: K8sImageRegistry
      validation:
        openAPIV3Schema:
          properties:
            trustedRegistries:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package kubernetes.validating.images

        deny[msg] if {
          input.request.kind.kind == "Pod"
          some container in input.request.object.spec.containers
          not startswith(container.image, input.parameters.trustedRegistries[_])
          msg := sprintf("Image '%v' comes from an untrusted registry", [container.image])
        }
